--- a/watchlist.html
+++ b/watchlist.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Mania</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header>
@@ -12,7 +13,7 @@
         <h1>Movie Mania</h1>
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#trending">Trending</a></li>
                 <li><a href="#watchlist">Watchlist</a></li>
             </ul>
@@ -22,7 +23,7 @@
         </div>
     </header>
     <main>
-      
+        <div class="spinner" id="spinner"><h1>Movie Mania</h1></div>
        
         <section id="watchlist">
             <h2>Your Watchlist</h2>
