--- a/watchlist.html
+++ b/watchlist.html
@@ -11,6 +11,11 @@
     <header>
       
         <h1>Movie Mania</h1>
+        <input type="checkbox" name="nav-toggle" id="toggle" class="nav-toggle">
+        <label for="toggle" class="nav-toggle-label">
+            <span></span>
+            <p>X</p> 
+        </label>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
