--- a/watchlist.html
+++ b/watchlist.html
@@ -10,7 +10,8 @@
 <body>
     <header>
       
-        <h1>Movie Mania</h1>
+        <a href="index.html"><h1>Movie Mania</h1></a>
+
         <input type="checkbox" name="nav-toggle" id="toggle" class="nav-toggle">
         <label for="toggle" class="nav-toggle-label">
             <span></span>
@@ -28,8 +29,7 @@
         </div>
     </header>
     <main>
-        <div class="spinner" id="spinner"><h1>Movie Mania</h1></div>
-       
+        <br><br>
         <section id="watchlist">
             <h2>Your Watchlist</h2>
             <div id="watchlist-movies"></div>
