--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body >
     <header>
-        <h1>Movie Mania</h1>
+        <a href="index.html"><h1>Movie Mania</h1></a>
         <input type="checkbox" name="nav-toggle" id="toggle" class="nav-toggle">
         <label for="toggle" class="nav-toggle-label">
             <span></span>
